--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -36,13 +36,16 @@
                 </div>
                 <div class="nav">
                     <a class="nav-link" (click)="enableLocationTracking()">
-                        <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung" i18n-alt>
+                        <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung" title="Ortung" i18n-alt
+                             i18n-title>
                     </a>
                     <a class="nav-link" (click)="toggle3dView()">
-                        <img src="/assets/icons/building.svg" width="25" height="25" alt="3D aktivieren/deaktivieren" i18n-alt>
+                        <img src="/assets/icons/building.svg" width="25" height="25" alt="3D aktivieren/deaktivieren"
+                             title="3D aktivieren/deaktivieren" i18n-alt i18n-title>
                     </a>
                     <a class="nav-link" (click)="resetMap()">
-                        <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen" i18n-alt>
+                        <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen"
+                             title="Karte zurücksetzen" i18n-alt i18n-title>
                     </a>
                 </div>
             </nav>
@@ -55,21 +58,26 @@
             <nav class="nav nav-underline">
                 <div class="nav mr-auto">
                     <a class="nav-link" (click)="toggleFilterActive()">
-                        <img src="/assets/icons/filter.svg" width="25" height="25" alt="Filtern" i18n-alt>
+                        <img src="/assets/icons/filter.svg" width="25" height="25" alt="Filtern" title="Filtern"
+                             i18n-alt i18n-title>
                     </a>
                 </div>
                 <div class="nav ml-auto">
                     <a class="nav-link" (click)="toggleSearchActive()">
-                        <img src="/assets/icons/search.svg" width="25" height="25" alt="Suche" i18n-alt>
+                        <img src="/assets/icons/search.svg" width="25" height="25" alt="Suche" title="Suche" i18n-alt
+                             i18n-title>
                     </a>
                     <a class="nav-link" (click)="enableLocationTracking()">
-                        <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung" i18n-alt>
+                        <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung" title="Ortung" i18n-alt
+                             i18n-title>
                     </a>
                     <a class="nav-link" (click)="toggle3dView()">
-                        <img src="/assets/icons/building.svg" width="25" height="25" alt="3D aktivieren/deaktivieren" i18n-alt>
+                        <img src="/assets/icons/building.svg" width="25" height="25" alt="3D aktivieren/deaktivieren"
+                             title="3D aktivieren/deaktivieren" i18n-alt i18n-title>
                     </a>
                     <a class="nav-link" (click)="resetMap()">
-                        <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen" i18n-alt>
+                        <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen"
+                             title="Karte zurücksetzen" i18n-alt i18n-title>
                     </a>
                 </div>
             </nav>
@@ -85,7 +93,8 @@
                     <span i18n>Stichtag</span>: {{stichtag}}
                 </button>
                 <div class="dropdown-menu" ngbDropdownMenu>
-                    <button type="button" *ngFor="let stag of STICHTAGE" (click)="onStichtagChange(stag)" ngbDropdownItem>
+                    <button type="button" *ngFor="let stag of STICHTAGE" (click)="onStichtagChange(stag)"
+                            ngbDropdownItem>
                         {{stag}}
                     </button>
                 </div>
