Updated node, improved accessability

--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -60,7 +60,7 @@
                    required>
         </div>
 
-        <div class="form-group col-8 col-lg-10 mb-1 mb-lg-0"
+        <div class="form-group col-8 col-lg-10 mb-1"
              *ngIf="item.type === 'regex'">
             <label for="validatorData{{ i }}{{ uniqId }}"
                    class="sr-only"
