--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -65,7 +65,6 @@
                                          class="bi bi-arrow-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
-                                         role="button"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -83,7 +82,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -121,7 +119,6 @@
                                          class="bi bi-arrow-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
-                                         role="button"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -138,7 +135,6 @@
                                          class="bi bi-arrow-down"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
-                                         role="button"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -168,7 +164,6 @@
                                          class="bi bi-arrow-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
-                                         role="button"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -187,7 +182,6 @@
                                          class="bi bi-arrow-down"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
-                                         role="button"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -292,12 +286,12 @@
                     <input class="form-control"
                            id="form-title-search"
                            type="text"
+                           role="search"
                            i18n-placeholder
                            placeholder="Titel"
                            i18n-aria-label
                            aria-label="Titel"
-                           (blur)="formTitle = $event.target.value; updateForms(false)"
-                           (keydown.enter)="formTitle = $event.target.value; updateForms(false)">
+                           (change)="formTitle = $event.target.value; updateForms(false)">
                 </div>
             </div>
         </div>
@@ -320,7 +314,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -336,7 +329,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -360,7 +352,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -376,7 +367,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -409,7 +399,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -425,7 +414,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
