--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -2,7 +2,7 @@
 <main class="mainpage p-1 p-lg-3"
       id="content">
     <section class="card bg-light"
-         *ngIf="data">
+             *ngIf="data">
         <div class="card-header h5">
             <svg width="1em"
                  height="1em"
@@ -30,8 +30,7 @@
                        aria-description="Suchen Sie hier nach einem Formular-Titel."
                        i18n-placeholder
                        i18n-aria-description
-                       (blur)="title = $event.target.value; update(false)"
-                       (keydown.enter)="title = $event.target.value; update(false)">
+                       (change)="title = $event.target.value; update(false)">
             </div>
         </div>
         <div class="card-body table-responsive p-0">
@@ -63,7 +62,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -79,7 +77,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -110,7 +107,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -127,7 +123,6 @@
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -178,7 +173,7 @@
                                 lastText="&raquo;"
                                 role="navigation"
                                 aria-label="Pagination"
-                                [attr.aria-description]="'Derzeit ist Seite ' + page + 
+                                [attr.aria-description]="'Derzeit ist Seite ' + page +
                                                     ' von ' + totalPages + ' Seiten ausgewählt.'"
                                 i18n-aria-label
                                 i18n-aria-description>
