--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -44,7 +44,7 @@
                              title="3D aktivieren/deaktivieren" i18n-alt i18n-title>
                     </a>
                     <a class="nav-link" (click)="resetMap()">
-                        <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen"
+                        <img src="/assets/icons/globe.svg" width="25" height="25" alt="Karte zurücksetzen"
                              title="Karte zurücksetzen" i18n-alt i18n-title>
                     </a>
                 </div>
