added draggable marker

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -116,6 +116,7 @@
 
     <mgl-map
         (click)="onMapClickEvent($event)"
+        (mouseUp)="onDragEnd()"
         (load)="loadMap($event)"
         [bounds]="bounds"
         [maxZoom]="20"
