Force user to fill out required attributes

--- a/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
+++ b/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
@@ -20,7 +20,8 @@
 </button>
 
 <power-modalmini #conditionmodal
-                 (closing)="close()">
+                 checkInvalid="true"
+                 (closing)="close($event)">
     <power-forms-editor-conditions [model]="model"
                                    [(data)]="data">
     </power-forms-editor-conditions>
