added draggable marker

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -117,6 +117,7 @@
     <mgl-map
         (click)="onMapClickEvent($event)"
         (mouseUp)="onDragEnd()"
+        (touchEnd)="onDragEnd()"
         (load)="loadMap($event)"
         [bounds]="bounds"
         [maxZoom]="20"
