--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <power-geosearch [class.d-none]="!searchActive" (selectResult)="flyTo($event)"></power-geosearch>
+    <power-geosearch [class.d-none]="!searchActive" (selectResult)="selectSearchResult($event)"></power-geosearch>
     <div [class.d-none]="!filterActive">
         <div class="btn-group d-flex w-100">
             <div class="btn-group" style="flex: 1;" ngbDropdown role="group"
