--- a/power/src/app/fragebogen/details/settings/settings.component.html
+++ b/power/src/app/fragebogen/details/settings/settings.component.html
@@ -1,44 +1,18 @@
 <power-modalmini #settingsmodal>
     <!-- tags -->
-    <power-tagbox [(tagList)]="tagList"
-                  [dataList]="tagList"
-                  i18n-tagboxLabel
-                  tagboxLabel="Tags"></power-tagbox>
-    <!-- owners -->
-    <power-tagbox [(tagList)]="ownerList"
-                  [dataList]="ownerList"
-                  i18n-tagboxLabel
-                  tagboxLabel="Besitzer"
-                  [displayBlock]="true"></power-tagbox>
-    <!-- readers -->
-    <power-tagbox [(tagList)]="readerList"
-                  [dataList]="readerList"
-                  i18n-tagboxLabel
-                  tagboxLabel="Leseberechtigte"
-                  [displayBlock]="true"></power-tagbox>
+    <power-tagbox [(tagList)]="tagList" [dataList]="tagList" i18n-tagboxLabel tagboxLabel="Tags"></power-tagbox>
 
     <!-- modal buttons -->
     <div class="modal-footer">
-        <button type="button"
-                class="btn btn-success"
-                i18n-title
-                title="Formular teilen"
-                (click)="updateForm()">
-            <svg width="1em"
-                 height="1em"
-                 viewBox="0 0 16 16"
-                 class="bi bi-share"
-                 fill="currentColor"
-                 xmlns="http://www.w3.org/2000/svg"
-                 focusable="false"
-                 aria-hidden="true">
+        <button type="button" class="btn btn-success" i18n-title title="Formular teilen" (click)="updateForm()">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-share" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
                 <path fill-rule="evenodd"
-                      d="M11.724 3.947l-7 3.5-.448-.894 7-3.5.448.894zm-.448 9l-7-3.5.448-.894 7 3.5-.448.894z" />
+                    d="M11.724 3.947l-7 3.5-.448-.894 7-3.5.448.894zm-.448 9l-7-3.5.448-.894 7 3.5-.448.894z" />
                 <path fill-rule="evenodd"
-                      d="M13.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm0 1a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5zm0 10a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm0 1a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5zm-11-6.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm0 1a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
+                    d="M13.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm0 1a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5zm0 10a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm0 1a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5zm-11-6.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm0 1a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
             </svg>
-            <span class="ml-1"
-                  i18n>Speichern</span>
+            <span class="ml-1" i18n>Speichern</span>
         </button>
     </div>
 </power-modalmini>
