--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -13,12 +13,12 @@
                    aria-describedby="descriptionBoris"
                    i18n>BORIS.NI</a>
                 <h6 id="borisSub"
-                    i18n>{{ 'Bodenrichtwertinformationssystem Niedersachsen' | hyphenate }}</h6>
+                    i18n>Bodenrichtwertinformationssystem Niedersachsen</h6>
                 <p class="lead text-justify"
                    id="descriptionBoris"
-                   i18n>{{ 'Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte' +
-                    ' in Niedersachsen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und' +
-                    ' für Flächen der Land- und Forstwirtschaft zur Verfügung.' | hyphenate }} </p>
+                   i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen
+                    stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und für Flächen der Land-
+                    und Forstwirtschaft zur Verfügung.</p>
             </div>
         </div>
     </section>
@@ -33,13 +33,13 @@
                    aria-describedby="descriptionNipix"
                    i18n>NIPIX</a>
                 <h6 id="nipixSub"
-                    i18n>{{ 'Niedersächsischer Immobilienpreisindex' | hyphenate }}</h6>
+                    i18n>Niedersächsischer Immobilienpreisindex</h6>
                 <p class="lead text-justify"
                    id="descriptionNipix"
-                   i18n>{{ 'Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,' +
-                    ' Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen' +
-                    ' „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die' +
-                    ' Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.' | hyphenate }}</p>
+                   i18n>Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,
+                    Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen
+                    „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die
+                    Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.</p>
             </div>
         </div>
         <div class="col-lg-3 pr-lg-0 pr-0 pl-0 order-lg-last order-first">
@@ -59,10 +59,9 @@
                    i18n>Online Formulare</a>
                 <p class="lead text-justify pt-3"
                    id="descriptionForm"
-                   i18n>
-                    {{ 'Hier können öffentliche und private Formulare des LGLN online ausgefüllt und abgeschickt werden. ' +
-                   'Wenn Sie eine PIN für ein Formular erhalten haben, können Sie diesen direkt über die PIN abrufen und ausfüllen.' | hyphenate }}
-                </p>
+                   i18n>Hier können öffentliche und private Formulare des LGLN online ausgefüllt und abgeschickt werden.
+                    Wenn Sie eine PIN für ein Formular erhalten haben, können Sie diesen direkt über die PIN abrufen und
+                    ausfüllen.</p>
                 <form #pinFormular="ngForm"
                       (ngSubmit)="submitPIN(pin.value)"
                       class="form-inline">
@@ -124,12 +123,12 @@
             <hr class="my-4">
         </div>
         <div class="col-lg-6">
-            <h5 i18n>{{ 'Immobilienmarktbericht 2020' | hyphenate }} </h5>
-            <a>{{ 'Eine Dekade steigender Preise in Niedersachsen...' | hyphenate }}</a>
+            <h5 i18n>Immobilienmarktbericht 2020</h5>
+            <a i18n>Eine Dekade steigender Preise in Niedersachsen...</a>
         </div>
         <div class="col-lg-6">
-            <h5 i18n>{{ 'Bodenrichtwerte 2021' | hyphenate }} </h5>
-            <a>{{ 'Die neuen Bodenrichtwerte sind jetzt verfügbar...' | hyphenate }}</a>
+            <h5 i18n>Bodenrichtwerte 2021</h5>
+            <a i18n>Die neuen Bodenrichtwerte sind jetzt verfügbar...</a>
         </div>
     </div>
 </section>
