--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -177,7 +177,7 @@
                         <li class="m-2"><a
                                href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/allgemeine_geschafts_und_nutzungsbedingungen_agnb/allgemeine-geschafts-und-nutzungsbedingungen-agnb-97401.html"
                                class="footer-link"
-                               i18n>Allgemeine Geschäfts- <br>und Nutzungsbedingungen</a></li>
+                               i18n>Allgemeine Geschäfts- und Nutzungsbedingungen</a></li>
                     </ul>
                     <p class="text-muted">
                         <span i18n>Version</span>: {{ appVersion.branch }}/{{ appVersion.version }}</p>
