--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -341,8 +341,8 @@
                              class="btn btn-link btn-block p-0 clearfix clickable"
                              role="button"
                              tabindex="0">
-                            <span class="pull-left float-left"
-                                  i18n>Seite {{ i + 1 }}</span>
+                            <span class="pull-left float-left">
+                                <span i18n>Seite</span> {{ i + 1 }}</span>
                             <span class="float-right pull-right"
                                   (click)="$event.stopPropagation()">
                                 <button type="button"
