--- a/power/src/app/shared/tagbox/tagbox.component.html
+++ b/power/src/app/shared/tagbox/tagbox.component.html
@@ -11,7 +11,7 @@
            name="formtag-{{ uniqId }}"
            maxlength="50"
            i18n-placeholder
-           placeholder="{{ tagboxLabel }} mit ENTER bestätigen">
+           placeholder="Mit ENTER bestätigen">
 
     <datalist id="{{ 'datalist-' + uniqId }}">
         <option *ngFor="let tag of dataList; index as i"
