--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -8,9 +8,8 @@
                aria-label="Sie haben ein Problem? Oder wollen einen Vorschlag machen? Bitte
                formulieren Sie ihr Anliegen so exakt wie möglich."
                i18n-aria-label
-               i18n>Sie haben ein Problem? Oder wollen einen Vorschlag machen? <br>
-                Bitte formulieren Sie ihren Vorschlag so exakt wie möglich und <br>
-                bei Problemen orientieren Sie sich bitte an den folgenden Stichpunkten:</p>
+               i18n>Sie haben ein Problem? Oder wollen einen Vorschlag machen? Bitte formulieren Sie ihren Vorschlag so
+                exakt wie möglich und bei Problemen orientieren Sie sich bitte an den folgenden Stichpunkten:</p>
         </div>
     </div>
     <div class="row justify-content-center">
